change docker-compose structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,10 @@
         - ./db:/var/lib/postgresql/data
       ports:
         - "5432:5432"
-    web:
+    app:
       build: .
       command: python main.py
       volumes:
         - ./code:/code
-      ports:
-        - "8000:8000"
       depends_on:
         - db
